[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "trackerstatus"
version = "1.0.9"
description = "A Python client for the trackerstatus.info API"
authors = [{ name = "mauvehed", email = "nate@mvh.dev" }]
license = "MIT"
keywords = ["tracker", "status", "api", "client"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.9"
readme = "README.md"
maintainers = [{ name = "mauvehed", email = "nate@mvh.dev" }]
urls = { Homepage = "https://github.com/mauvehed/trackerstatus", Repository = "https://github.com/mauvehed/trackerstatus", Documentation = "https://github.com/mauvehed/trackerstatus/blob/main/docs/API.md" }

[tool.poetry]
packages = [{include = "trackerstatus"}]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
requests-mock = "^1.12.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pylint = "^3.3.5"
pre-commit = "^4.1.0"
types-requests = "^2.28.11"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
